# QA_Guru_python_5_HW_23_Mobile_automation_Browserstack

./: .gitignore  config.py  pyproject.toml
mobile_tests_5_23/helpers/: file.py
mobile_tests_5_23/helpers/allure/: attach.py
tests/android/: conftest.py  test_wikipedia.py
